# PERQ

./: .gitignore  Cargo.toml  compare.cpp  fix_conn.txt  futureidea.txt  references.txt
benches/: binop_bench.rs  coeff_bench.rs  coeff_div_bench.rs  coeff_ring_bench.rs  hash_bench.rs  seq_bench.rs  transform_bench.rs
src/: coeff.rs  exprtree.rs  fixedseq.rs  genseqs.rs  hashing.rs  interpolate.rs  lexer.rs  lib.rs  lll.rs  macros.rs  main.rs  mathtypes.rs  matrix.rs  modulo.rs  oeis.rs  parser.rs  powerseries.rs  runtime.rs  searcher.rs  series.rs  shortseq.rs
