[package]
name = "perq"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.0"
rayon = "1.5.3"
rug = "1.16.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "coeff_ring_bench"
harness = false

[[bench]]
name = "coeff_div_bench"
harness = false

[[bench]]
name = "seq_bench"
harness = false
